OpenJMLTest/test/tcWithJml/expected
test\tcWithJml\TCWithJml.jml:24: error: The field f in the specification matches a Java field TCWithJml.f with different modifiers: final
    int f;
        ^
test\tcWithJml\TCWithJml.jml:32: error: The method m in the specification matches a Java method m(int,int,int,int) with different modifiers: public protected
    protected static Object m( int i, final int j, int k, final int l);
                            ^
test\tcWithJml\TCWithJml.jml:32: error: The parameter i has different modifiers in the .java and .jml files: final
    protected static Object m( int i, final int j, int k, final int l);
                                   ^
test\tcWithJml\TCWithJml.jml:32: error: The parameter j has different modifiers in the .java and .jml files: final
    protected static Object m( int i, final int j, int k, final int l);
                                                ^
test\tcWithJml\TCWithJml.jml:42: error: The method mm in the specification matches a Java method mm() with different modifiers: public protected
    protected Object mm();
                     ^
test\tcWithJml\TCWithJml.jml:12: error: A declaration may not be both non_null and nullable
    @NonNull @Nullable
             ^
test\tcWithJml\TCWithJml.jml:15: error: A declaration may not be both non_null and nullable
    /*@ non_null nullable */
                 ^
test\tcWithJml\TCWithJml.jml:18: error: This JML modifier is not allowed for a method declaration
    @Monitored
    ^
test\tcWithJml\TCWithJml.jml:21: error: This JML modifier is not allowed for a method declaration
    /*@ monitored */
        ^
test\tcWithJml\TCWithJml.java:20: warning: Annotations in a .java file are superseded (and ignored) by the specifications in the corresponding .jml file: field f1, annotation @NonNull
	@NonNull Object f1;
	^
test\tcWithJml\TCWithJml.jml:28: error: This JML modifier is not allowed for a field declaration
    @Pure Object f3;
    ^
test\tcWithJml\TCWithJml.jml:29: error: This JML modifier is not allowed for a field declaration
    /*@ pure */ Object f3a;
        ^
test\tcWithJml\TCWithJml.java:31: warning: Annotations in a .java file are superseded (and ignored) by the specifications in the corresponding .jml file: parameter i, annotation @Nullable
	public static Object p(@Nullable Integer i, Integer j, Integer k, @Nullable  Integer l) {
	                       ^
test\tcWithJml\TCWithJml.jml:36: error: A declaration may not be both non_null and nullable
    public static Object q(@NonNull @Nullable Integer j);
                                    ^
test\tcWithJml\TCWithJml.jml:39: error: This JML modifier is not allowed for a formal parameter
    public static Object r(@Pure Integer j);
                           ^
test\tcWithJml\TCWithJml.jml:37: error: A declaration may not be both non_null and nullable
    public static Object qa(/*@ non_null nullable */ Integer j);
                                         ^
test\tcWithJml\TCWithJml.jml:40: error: This JML modifier is not allowed for a formal parameter
    public static Object ra(/*@ pure */ Integer j);
                                ^
error: The specification must include all the annotations that the Java declaration declares: @org.jmlspecs.annotation.Pure
test\tcWithJml\TCWithJml.jml:48: error: The type BB in the specification matches a Java type BB with different modifiers: final
class BB {}
^
test\tcWithJml\TCWithJml.jml:52: error: A declaration may not be both non_null_by_default and nullable_by_default
@NonNullByDefault @NullableByDefault class DD {}
                  ^
test\tcWithJml\TCWithJml.jml:54: error: This JML modifier is not allowed for a type declaration
@SpecPublic class EE {}
^
19 errors
2 warnings
